# Watchtower-AI

./: .dockerignore  Dockerfile  pyproject.toml  readme.md
migrations/versions/: 5cccc6d43926_.py  f5984a966362_.py
src/: main.py  make_celery.py
src/config/: config.py
src/domains/detect/: detector.py  forms.py  models.py  views.py
src/domains/detect/detector/: __init__.py  image_detector.py  video_detector.py
src/domains/detect/templates/detect/: detect_images.html  image_dashboard.html  video_dashboard.html  video_detail.html
src/domains/file/: views.py
src/domains/file/templates/file/: image_upload.html
src/domains/user/: models.py
src/templates/: base.html
